<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/low_poly_banner_design_2203"
    tools:context=".signupActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginTitle"
        android:textColor="#285C0D"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_editbuttonview"
        android:text="@string/SignUpButton"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/InfoName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_editview"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/SignUpName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#285C0D"
        android:textColorHint="#285C0D"
        app:layout_constraintBottom_toTopOf="@+id/InfoEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/InfoEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_editview"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/LoginEmailHint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#285C0D"
        android:textColorHint="#285C0D"
        app:layout_constraintEnd_toEndOf="@+id/InfoName"
        app:layout_constraintStart_toStartOf="@+id/InfoName"
        app:layout_constraintTop_toBottomOf="@+id/InfoName"
        app:layout_constraintBottom_toTopOf="@id/ProjectInfo"/>


    <EditText
        android:id="@+id/ProjectInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_editview"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/SignUpPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#285C0D"
        android:textColorHint="#285C0D"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="@+id/InfoEmail"
        app:layout_constraintStart_toStartOf="@+id/InfoEmail"
        app:layout_constraintTop_toBottomOf="@+id/InfoEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>