<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserrofileActivity"
    android:background="@drawable/low_poly_banner_design_2203">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/second_layer_profile_edit"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_edit"
                android:gravity="center"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profileImg"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="9dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10dp"
                    app:civ_shadow_color="#3f51b5"/>

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SignUpName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="50dp"
                    android:text="Profile"
                    android:textColor="@color/ObjectID"
                    android:textSize="18dp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/second_layer_profile_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="40dp"
                android:paddingBottom="10dp">


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/info_layout_edit"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/LoginEmailHint"
                android:textColor="#285C0D"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/profileBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/SignUpBranch"
                android:textColor="#285C0D"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/profileField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/SignUpField"
                android:textColor="#285C0D"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_editbuttonview"
                android:text="Logout"
                android:textColor="#fff" />


        </LinearLayout>

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="1">

        <ImageButton
            android:id="@+id/btn_HomeP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/homebuttonedit"
            android:src="@drawable/ic_home"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/btn_ProfileP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@drawable/homebuttonedit"
            android:src="@drawable/ic_person"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/btn_PaymentP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/homebuttonedit"
            android:src="@drawable/ic_payment"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>